großteil an warnungen behoben